# EchoSphere

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/workflows/: deploy_docs.yaml
advanced/ci-cd/: index.html
advanced/large-scale/: index.html
advanced/performance/: index.html
command-reference/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/advanced/: ci-cd.md  large-scale.md  performance.md
docs/command-reference/: index.md
docs/examples/: cookbook.md
docs/getting-started/: index.md
docs/reference/: api-usage.md  configuration.md  environment-variables.md  sql-testing-syntax.md
docs/supported-platforms/: index.md
docs/troubleshooting/: index.md
docs/user-guide/: index.md  using_qualified_names.md
docs/writing-tests/: index.md
echosphere/: ConfigParser.py  main.py
echosphere/commands/: setup.py  view.py
echosphere/core/: excel_export.py  junit_export.py  platforms.py  run_async_tests.py  setup_es.py  suite_display.py  test_result.py
echosphere/env_config_parser/: DatabricksEnvConfigParser.py  PlatformExtractor.py  PostgresEnvConfigParser.py  SnowflakeEnvConfigParser.py
echosphere/utils/: sql_test_fetcher.py
examples/cookbook/: index.html
getting-started/: index.html
overrides/: main.html
reference/api-usage/: index.html
reference/configuration/: index.html
reference/environment-variables/: index.html
search/: search_index.json
supported-platforms/: index.html
tests/: conftest.py
troubleshooting/: index.html
user-guide/: index.html
writing-tests/: index.html
(+24 files in other folders)
